# optimize-input-tokens-pipeline

./: .coveragerc  .gitignore  Makefile  README.md  TESTING_GUIDE.md  ideas-brainstorm.md  implementation-plan.md  input.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_tests.sh  setup_project.sh  test_installation.py  text-normalization-approaches.md  topics-and-ideas-to-research-and-consider.md
.github/workflows/: ci.yml
scripts/: ci_all.sh  ci_format.sh  ci_lint.sh  ci_test.sh  ci_typecheck.sh
tests/: __init__.py  conftest.py  helpers.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_abbreviations.py  test_basic_functionality.py  test_pipeline.py  test_spell_check.py  test_token_aware.py
token-optimizer/: QUICK_START.md  README.md  demo.sh  demo_verbose.sh  pipeline.py  pipeline_verbose.py  requirements.txt  setup.sh  test_example.txt
token-optimizer/config/: abbreviations.json  pipeline_config.yaml
token-optimizer/examples/: verbose_comparison.py
token-optimizer/scripts/: 01_spell_check.py  02_abbreviations.py  03_token_aware.py  04_ml_paraphrase.py
token-optimizer/utils/: __init__.py  diff_viewer.py
